Variable description update and variable description update in bundle generation

--- a/config/manifests/bases/jws-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/jws-operator.clusterserviceversion.yaml
@@ -18,9 +18,6 @@ metadata:
         }
       ]
     capabilities: Seamless Upgrades
-    createdAt: "2025-09-03T09:53:39Z"
-    operators.operatorframework.io/builder: operator-sdk-v1.41.1
-    operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
   name: jws-operator.v0.0.2
   namespace: placeholder
 spec:
@@ -234,407 +231,8 @@ spec:
     mediatype: image/svg+xml
   install:
     spec:
-      clusterPermissions:
-      - rules:
-        - apiGroups:
-          - ""
-          resourceNames:
-          - pull-secret
-          resources:
-          - secrets
-          verbs:
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - config.openshift.io
-          resources:
-          - clusterversions
-          verbs:
-          - get
-          - list
-          - watch
-        serviceAccountName: jws-operator-insights
-      - rules:
-        - apiGroups:
-          - ""
-          resources:
-          - configmaps
-          - persistentvolumeclaims
-          - pods
-          - services
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - ""
-          resources:
-          - namespaces
-          verbs:
-          - get
-        - apiGroups:
-          - ""
-          resources:
-          - services/finalizers
-          verbs:
-          - update
-        - apiGroups:
-          - apps
-          resources:
-          - deployments
-          - statefulsets
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - apps
-          resources:
-          - deployments/finalizers
-          - jws-operator
-          verbs:
-          - update
-        - apiGroups:
-          - build.openshift.io
-          resources:
-          - buildconfigs
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - update
-          - watch
-        - apiGroups:
-          - build.openshift.io
-          resources:
-          - builds
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - image.openshift.io
-          resources:
-          - imagestreams
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - monitoring.coreos.com
-          resources:
-          - servicemonitors
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - rbac.authorization.k8s.io
-          resources:
-          - rolebindings
-          verbs:
-          - create
-          - get
-          - grant
-          - list
-          - watch
-        - apiGroups:
-          - route.openshift.io
-          resources:
-          - routes
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - route.openshift.io
-          resources:
-          - routes/custom-host
-          verbs:
-          - create
-          - get
-        - apiGroups:
-          - web.servers.org
-          resources:
-          - webservers
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - web.servers.org
-          resources:
-          - webservers/finalizers
-          verbs:
-          - update
-        - apiGroups:
-          - web.servers.org
-          resources:
-          - webservers/status
-          verbs:
-          - get
-          - patch
-          - update
-        - apiGroups:
-          - authentication.k8s.io
-          resources:
-          - tokenreviews
-          verbs:
-          - create
-        - apiGroups:
-          - authorization.k8s.io
-          resources:
-          - subjectaccessreviews
-          verbs:
-          - create
-        serviceAccountName: jws-operator-controller-manager
-      deployments:
-      - label:
-          control-plane: controller-manager
-        name: jws-operator-controller-manager
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              control-plane: controller-manager
-          strategy: {}
-          template:
-            metadata:
-              labels:
-                control-plane: controller-manager
-            spec:
-              containers:
-              - args:
-                - --metrics-bind-address=:8443
-                - --leader-elect
-                - --health-probe-bind-address=:8081
-                command:
-                - /manager
-                env:
-                  - name: OPERATOR_NAMESPACE
-                    valueFrom:
-                      fieldRef:
-                        fieldPath: metadata.namespace
-                  - name: INSIGHTS_ENABLED
-                    value: "true"
-                image: quay.io/mmadzin/jws-operator:2.2.x
-                livenessProbe:
-                  httpGet:
-                    path: /healthz
-                    port: 8081
-                  initialDelaySeconds: 15
-                  periodSeconds: 20
-                name: manager
-                readinessProbe:
-                  httpGet:
-                    path: /readyz
-                    port: 8081
-                  initialDelaySeconds: 5
-                  periodSeconds: 10
-                resources:
-                  limits:
-                    cpu: 500m
-                    memory: 128Mi
-                  requests:
-                    cpu: 100m
-                    memory: 64Mi
-                securityContext:
-                  allowPrivilegeEscalation: false
-                  capabilities:
-                    drop:
-                    - ALL
-              securityContext:
-                runAsNonRoot: true
-                seccompProfile:
-                  type: RuntimeDefault
-              serviceAccountName: jws-operator-controller-manager
-              terminationGracePeriodSeconds: 10
-      - label:
-          app.kubernetes.io/name: jws-operator-insights
-          control-plane: controller-manager
-        name: jws-operator-insights
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app.kubernetes.io/name: jws-operator-insights
-              control-plane: controller-manager
-          strategy: {}
-          template:
-            metadata:
-              annotations:
-                kubectl.kubernetes.io/default-container: insights
-              labels:
-                app.kubernetes.io/name: jws-operator-insights
-                control-plane: controller-manager
-            spec:
-              containers:
-                - args:
-                    - --health-probe-bind-address=:8081
-                    - --metrics-bind-address=0
-                    - --leader-elect
-                  env:
-                    - name: RELATED_IMAGE_INSIGHTS_PROXY
-                      value: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
-                    - name: INSIGHTS_BACKEND_DOMAIN
-                      value: console.redhat.com
-                    - name: USER_AGENT_PREFIX
-                      value: jws-operator/0.0.1-dev
-                    - name: WATCH_NAMESPACE
-                      valueFrom:
-                        fieldRef:
-                          fieldPath: metadata.annotations['olm.targetNamespaces']
-                    - name: OPERATOR_NAME
-                      value: jws-operator-insights
-                    - name: OPERATOR_NAMESPACE
-                      valueFrom:
-                        fieldRef:
-                          fieldPath: metadata.namespace
-                    - name: INSIGHTS_ENABLED
-                      value: "true"
-                  image: registry.redhat.io/insights-runtimes-tech-preview/runtimes-inventory-rhel8-operator:latest
-                  livenessProbe:
-                    httpGet:
-                      path: /healthz
-                      port: 8081
-                    initialDelaySeconds: 15
-                    periodSeconds: 20
-                  name: insights
-                  readinessProbe:
-                    httpGet:
-                      path: /readyz
-                      port: 8081
-                    initialDelaySeconds: 5
-                    periodSeconds: 10
-                  resources:
-                    limits:
-                      cpu: "1"
-                      memory: 256Mi
-                    requests:
-                      cpu: 100m
-                      memory: 64Mi
-                  securityContext:
-                    allowPrivilegeEscalation: false
-                    capabilities:
-                      drop:
-                        - ALL
-              securityContext:
-                runAsNonRoot: true
-                seccompProfile:
-                  type: RuntimeDefault
-              serviceAccountName: jws-operator-insights
-              terminationGracePeriodSeconds: 10
-      permissions:
-      - rules:
-          - apiGroups:
-              - ""
-            resources:
-              - configmaps
-            verbs:
-              - get
-              - list
-              - watch
-              - create
-              - update
-              - patch
-              - delete
-          - apiGroups:
-              - coordination.k8s.io
-            resources:
-              - leases
-            verbs:
-              - get
-              - list
-              - watch
-              - create
-              - update
-              - patch
-              - delete
-          - apiGroups:
-              - ""
-            resources:
-              - events
-            verbs:
-              - create
-              - patch
-          - apiGroups:
-              - ""
-            resources:
-              - configmaps/finalizers
-              - secrets
-              - services
-            verbs:
-              - create
-              - get
-              - list
-              - update
-              - watch
-          - apiGroups:
-              - apps
-            resources:
-              - deployments
-              - deployments/finalizers
-            verbs:
-              - create
-              - get
-              - list
-              - update
-              - watch
-        serviceAccountName: jws-operator-insights
-      - rules:
-        - apiGroups:
-          - ""
-          resources:
-          - configmaps
-          verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - patch
-          - delete
-        - apiGroups:
-          - coordination.k8s.io
-          resources:
-          - leases
-          verbs:
-          - get
-          - list
-          - watch
-          - create
-          - update
-          - patch
-          - delete
-        - apiGroups:
-          - ""
-          resources:
-          - events
-          verbs:
-          - create
-          - patch
-        serviceAccountName: jws-operator-controller-manager
-    strategy: deployment
+      deployments: null
+    strategy: ""
   installModes:
   - supported: true
     type: OwnNamespace
@@ -654,7 +252,4 @@ spec:
   minKubeVersion: 1.25.0
   provider:
     name: WebServer community
-  relatedImages:
-  - image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
-    name: insights-proxy
   version: 0.0.2
