--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -18,7 +18,7 @@ metadata:
         }
       ]
     capabilities: Seamless Upgrades
-    createdAt: "2025-11-07T12:11:11Z"
+    createdAt: "2025-12-16T12:53:51Z"
     operators.operatorframework.io/builder: operator-sdk-v1.41.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
   name: jws-operator.v0.0.2
@@ -420,17 +420,23 @@ spec:
         serviceAccountName: jws-operator-controller-manager
       deployments:
       - label:
+          app.kubernetes.io/managed-by: kustomize
+          app.kubernetes.io/name: jws-operator
           control-plane: controller-manager
         name: jws-operator-controller-manager
         spec:
           replicas: 1
           selector:
             matchLabels:
+              app.kubernetes.io/name: jws-operator
               control-plane: controller-manager
           strategy: {}
           template:
             metadata:
+              annotations:
+                kubectl.kubernetes.io/default-container: manager
               labels:
+                app.kubernetes.io/name: jws-operator
                 control-plane: controller-manager
             spec:
               containers:
@@ -438,6 +444,7 @@ spec:
                 - --metrics-bind-address=:8443
                 - --leader-elect
                 - --health-probe-bind-address=:8081
+                - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
                 command:
                 - /manager
                 env:
@@ -455,6 +462,10 @@ spec:
                   initialDelaySeconds: 15
                   periodSeconds: 20
                 name: manager
+                ports:
+                - containerPort: 9443
+                  name: webhook-server
+                  protocol: TCP
                 readinessProbe:
                   httpGet:
                     path: /readyz
@@ -473,12 +484,20 @@ spec:
                   capabilities:
                     drop:
                     - ALL
+                volumeMounts:
+                - mountPath: /tmp/k8s-webhook-server/serving-certs
+                  name: webhook-certs
+                  readOnly: true
               securityContext:
                 runAsNonRoot: true
                 seccompProfile:
                   type: RuntimeDefault
               serviceAccountName: jws-operator-controller-manager
               terminationGracePeriodSeconds: 10
+              volumes:
+              - name: webhook-certs
+                secret:
+                  secretName: webhook-server-cert
       - label:
           app.kubernetes.io/name: jws-operator-insights
           control-plane: controller-manager
@@ -668,3 +687,25 @@ spec:
   - image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
     name: insights-proxy
   version: 0.0.2
+  webhookdefinitions:
+  - admissionReviewVersions:
+    - v1
+    containerPort: 443
+    deploymentName: jws-operator-controller-manager
+    failurePolicy: Fail
+    generateName: vwebserver-v1alpha1.kb.io
+    rules:
+    - apiGroups:
+      - web.servers.org
+      apiVersions:
+      - v1alpha1
+      operations:
+      - CREATE
+      - UPDATE
+      - DELETE
+      resources:
+      - webservers
+    sideEffects: None
+    targetPort: 9443
+    type: ValidatingAdmissionWebhook
+    webhookPath: /validate-web-servers-org-v1alpha1-webserver
