--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -18,7 +18,7 @@ metadata:
         }
       ]
     capabilities: Seamless Upgrades
-    createdAt: "2025-12-16T12:53:51Z"
+    createdAt: "2026-01-08T17:27:46Z"
     operators.operatorframework.io/builder: operator-sdk-v1.41.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
   name: jws-operator.v0.0.2
@@ -69,6 +69,9 @@ spec:
       - description: URL for the repository of the application sources
         displayName: Source Repository URL
         path: webImageStream.webSources.sourceRepositoryUrl
+      - description: Secret for the repository of the application sources
+        displayName: Source Repository Secret
+        path: webImageStream.webSources.sourceRepositorySecret
       - description: URL to a maven repository
         displayName: Maven Mirror URL
         path: webImageStream.webSources.webSourcesParams.mavenMirrorUrl
@@ -315,6 +318,7 @@ spec:
           - build.openshift.io
           resources:
           - buildconfigs
+          - buildconfigs/instantiate
           verbs:
           - create
           - delete
