--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -19,6 +19,7 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: jws-operator
       control-plane: controller-manager
   replicas: 1
   template:
