--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -66,6 +66,11 @@ spec:
         image: controller:latest
         name: manager
         ports: []
+        env:
+          - name: WATCH_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.annotations['olm.targetNamespaces']
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
